# tryopenmp

./: CMakeLists.txt  README.md  tryopenmp.cpp
